--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,94 @@
-body {margin:0;}
+.social_share_buttons
+		{
+			padding: 15px;
+			text-align: center;
+		}
+		.social_link
+		{
+			padding:5px;
+			line-height: 30px;
+			 width: 100px;
+			margin: auto;
+			text-decoration: none;
+			border-radius: 10px;
+			transition-duration: 0.75s;
+ 			color: #fff !important;
+			outline:none;
+			border-style: solid;
+			font-size: 15px;
+    		font-family: monospace,arial,sans-serif,serif;
+    		font-weight: 800;
+    		text-align: center;
+    		border-style: solid;
+    		text-decoration: none !important;
+		}
+		#facebook_link_share
+		{
+			border: 2px solid #284582 !important;
+			background:#3b5998;
+		}
+		#twitter_link_share
+		{
+			border:2px solid #0084b7 !important;
+			background:#00aced;
+		}
+		#google_plus_link_share
+		{
+			border: 2px solid #D0240F !important;
+			background:#dd4b39;
+		}
+		#linkedin_link_share
+		{
+			border:2px solid #1094C5 !important;
+			background: #007bb6;
+		}
+		#reddit_link_share
+		{
+			border:2px solid red !important;
+			background: red;
+		}
+		.social_link:hover
+		{
+			box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+		}
+		#facebook_link_share:hover,#twitter_link_share:hover,#linkedin_link_share:hover,#google_plus_link_share:hover,#reddit_link_share:hover
+		{
+			background: #fff;
+		}
+		#facebook_link_share:hover
+		{
+			color: #3b5998 !important;
+			border:2px solid #3b5998 !important;
+		}
+		#linkedin_link_share:hover
+		{
+			color: #007bb6 !important;
+			border:2px solid #007bb6 !important;
+		}
+		#twitter_link_share:hover
+		{
+			color: #00aced !important;
+			border:2px solid #00aced !important;
+		}
+		#google_plus_link_share:hover
+		{
+			color: #dd4b39 !important;
+			border:2px solid #dd4b39 !important;
+		}
+		#reddit_link_share:hover
+		{
+			color: red !important;
+			border:2px solid red !important;
+		}
 ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  position: absolute;
+  
+  width: 100%;
 }
 
 ul.topnav li {float: left;}
@@ -32,7 +116,7 @@ ul.topnav li.icon {display: none;}
 }
 
 @media screen and (max-width:680px) {
-  ul.topnav.responsive {position: relative;}
+  ul.topnav.responsive {position: absolute;}
   ul.topnav.responsive li.icon {
     position: absolute;
     right: 0;
@@ -46,6 +130,28 @@ ul.topnav li.icon {display: none;}
     display: block;
     text-align: left;
   }
+}
+@media screen and (max-width:680px)
+{
+	.social_link
+		{
+			display: block;
+			padding:5px;
+			width: 100px;
+			margin: 10px auto !important;
+			text-decoration: none;
+			border-radius: 10px;
+			transition-duration: 0.75s;
+ 			color: #fff !important;
+			outline:none;
+			line-height: 20px;
+			border-style: solid;
+			font-size: 15px;
+    		font-family: monospace,arial,sans-serif,serif;
+    		font-weight: 800;
+    		text-align: center;
+    		border-style: solid;
+		}
 }
 header {background: black;color:white; padding: 20px; text-align: center;}
 footer {background: #aaa;color:white;padding: 10px;text-align: center;}
